Finshed expose/explore

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Add Recipes Here -->
   </main>
   <!-- For the Explore section - Remove "hidden" class before beginning -->
-  <form id="new-recipe" class="hidden">
+  <form id="new-recipe">
     <fieldset>
       <legend>Image:</legend>
       <label for="image-src">
@@ -81,7 +81,7 @@
       </label>
     </fieldset>
     <button type="submit">Add Recipe</button>
-    <button type="button" class="danger">Clear Local Storage</button>
+    <button type="button" class="danger" id="clear">Clear Local Storage</button>
   </form>
 </body>
 </html>
